--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "crypto-js": "^4.1.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.54.2"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
+    "@iconify/types": "^1.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
+    "@types/react-bootstrap": "^0.32.30",
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
