--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.2"
+    "sass": "^1.54.2",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@iconify/react": "^3.2.2",
@@ -25,6 +26,7 @@
     "@types/react": "18.0.15",
     "@types/react-bootstrap": "^0.32.30",
     "@types/react-dom": "18.0.6",
+    "@types/swiper": "^6.0.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
