--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.0",
     "crypto-js": "^4.1.1",
     "next": "12.2.3",
+    "next-i18next": "^11.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
